<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


        <item android:title="Profile">
            <menu>

                <group android:checkableBehavior="single">

                    <item
                        android:id="@+id/nav_profile"
                        android:title="@string/profile"
                        android:icon="@drawable/profileuser"/>
                    <item
                        android:id="@+id/nav_logout"
                        android:title="@string/logout"
                        android:icon="@drawable/logout"/>

                    </group>

                    </menu>
                   </item>

                    <item android:title="Categories">
                        <menu>

                            <group android:checkableBehavior="single">
                                <item
                                    android:id="@+id/nav_subjects"
                                    android:title="@string/subjects"
                                    android:icon="@drawable/language"/>
                                <item
                                    android:id="@+id/nav_timetable"
                                    android:title="@string/timetable"
                                    android:icon="@drawable/timetable"/>
                                <item
                                    android:id="@+id/nav_attendance"
                                    android:title="@string/attendance"
                                    android:icon="@drawable/checkingattendance"/>
                                <item
                                    android:id="@+id/nav_activities"
                                    android:title="@string/activities"
                                    android:icon="@drawable/puzzle"/>
                                <item
                                    android:id="@+id/nav_calendar"
                                    android:title="@string/calendar"
                                    android:icon="@drawable/calendars"/>
                                <item
                                    android:id="@+id/nav_staff"
                                    android:title="@string/staff"
                                    android:icon="@drawable/staff"/>
                                <item
                                    android:id="@+id/menu_none"
                                    android:title=""
                                    android:visible="false"/>
                                </group>

                               </menu>
                    </item>
</menu>
